<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (c) 2022  Aditya Bavadekar
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/PinLogDebugActivity">

    <RelativeLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorLoadingBackground"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/emptyLayout"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_empty"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/no_logs_yet"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/no_logs_yet_main_content_one"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="?attr/colorLoadingBackground"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/code_initialise"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:textColorPrimary"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/no_logs_yet_main_content_two"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorLoadingBackground"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/code_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:textColorPrimary"
                android:textIsSelectable="true" />

        </LinearLayout>

    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/log_item" />

</LinearLayout>